--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends: debhelper (>= 9),
                python3-setuptools,
                python3-all
 Standards-Version: 3.9.6
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-frozendict.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-frozendict.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-frozendict.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-frozendict.git
 Homepage: https://github.com/slezica/python-frozendict
 
 Package: python-frozendict
